# Cpp-Vulkan-Template

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: detect_pointer_size.cmake
lib/: CMakeLists.txt
lib/Vulkan/: CMakeLists.txt
src/: main.cpp  vulkan_device_score.cpp  vulkan_device_score.hpp  vulkan_print_test.cpp  vulkan_print_test.hpp
tests/does_it_run/: CMakeLists.txt  main.cpp
